# colang

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  colang.co  colang.cpp  colang.h  ir.h  lexer.cpp  lexer.h
colang/: CMakeLists.txt  ast.cpp  ast.h  ast_call.cpp  ast_codeblock.cpp  ast_do.cpp  ast_expr.cpp  ast_for.cpp  ast_function.cpp  ast_goto.cpp  ast_if.cpp  ast_label.cpp  ast_noncode.cpp  ast_return.cpp  ast_value.cpp  ast_var.cpp  ast_while.cpp  colang.co  colang.cpp  colang.h  lexer.cpp  lexer.h  scope.cpp
test/: test.co  test1.co
