# CMakeList.txt: colang 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)

# 如果支持，请为 MSVC 编译器启用热重载。
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

include_directories(../llvm-17.0.6/llvm-project-llvmorg-17.0.6/llvm/include)
include_directories(../llvm-17.0.6/build/include)

link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMX86TargetMCA.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMMCA.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMX86Disassembler.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMX86AsmParser.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMX86CodeGen.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMX86Desc.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMX86Info.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMMCDisassembler.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMGlobalISel.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMSelectionDAG.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMCFGuard.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMAsmPrinter.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMOrcJIT.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMPasses.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMIRPrinter.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMCoroutines.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMipo.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMInstrumentation.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMVectorize.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMLinker.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMFrontendOpenMP.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMCodeGen.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMScalarOpts.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMInstCombine.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMObjCARCOpts.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMCodeGenTypes.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMBitWriter.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMAggressiveInstCombine.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMTransformUtils.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMWindowsDriver.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMJITLink.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMOption.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMExecutionEngine.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMTarget.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMAnalysis.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMProfileData.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMSymbolize.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMDebugInfoBTF.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMDebugInfoPDB.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMDebugInfoMSF.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMDebugInfoDWARF.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMRuntimeDyld.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMOrcTargetProcess.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMOrcShared.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMObject.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMTextAPI.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMMCParser.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMIRReader.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMAsmParser.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMBitReader.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMMC.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMDebugInfoCodeView.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMCore.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMRemarks.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMBitstreamReader.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMBinaryFormat.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMTargetParser.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMSupport.lib)
link_libraries(D:/svn/bp.shanmin.com/co/llvm-17.0.6/build/Debug/lib/LLVMDemangle.lib)


project ("colang")

# 将源代码添加到此项目的可执行文件。
add_executable (colang "colang.cpp" "colang.h" "lexer.h" "ast.h"  "ir.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET colang PROPERTY CXX_STANDARD 20)
endif()

# TODO: 如有需要，请添加测试并安装目标。
